2007-09-12  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/sourcelist.py:
	Raise an exception only if we REALLY have an existing source.

2007-09-12  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/objectfactory.py:
	Clean unique serialization methods.
	Add more documentation
	* pitivi/project.py:
	Implement Serializable on Project.
	* pitivi/serializable.py:
	Add more checks. Raise Exceptions instead of print.
	* pitivi/settings.py:
	Implement Serializable on ExportSettings.
	* pitivi/sourcelist.py:
	New method : SourceList.addFactory(self, uri,factory)
	Implement Serializable on SourceList a bit better.
	* pitivi/timeline/composition.py:
	New method : Composition.cleanUp(self)
	Implement Serializable on Composition with checks.
	* pitivi/timeline/objects.py:
	raise Exceptions instead of warning for critical issues.
	* pitivi/timeline/timeline.py:
	minor cleanups
	* tests/test_file_load_save.py:
	cleanup.
	* tests/test_timeline_composition.py:
	More checks for serialization, uniqueness and correct property
	attributions.
	* tests/test_timeline_objects.py:
	Also check that gnlobject is created after deserialization.

2007-09-11  Edward Hervey  <bilboed@bilboed.com>

	* pitivi/check.py:
	Add checks for newly required python modules (zope.interface and
	distutils).
	* pitivi/ui/pluginmanagerdialog.py:
	Fix import statements.

2007-09-07  Edward Hervey  <bilboed@bilboed.com>

	* configure.ac:
	On the road to 0.11 we are...

2007-08-31  Edward Hervey  <bilboed@bilboed.com>

	* AUTHORS:
	* pitivi/ui/mainwindow.py:
	Add Luca to the Authors list.

2007-08-31  Edward Hervey  <bilboed@bilboed.com>

	Patch by: Luca Della Santina <dellasantina@farm.unipi.it>
	* pitivi/Makefile.am:
	* pitivi/pitivi.py:
	* pitivi/plugincore.py:
	* pitivi/pluginmanager.py:
	* pitivi/settings.py:
	* pitivi/ui/Makefile.am:
	* pitivi/ui/actions.xml:
	* pitivi/ui/mainwindow.py:
	* pitivi/ui/pluginmanagerdialog.glade:
	* pitivi/ui/pluginmanagerdialog.py:
	Plugin system (core + ui) !