@@ -1,3 +1,13 @@
+2007-09-26  Brandon Lewis  <brandon_lewis@berkeley.edu>
+
+	* pitivi/pluginmanager.py:
+	changed "plugin-activated-changed" to "plugin-enabled-changed" in
+	signal declaration, since this is used in comments and elsewhere
+	in the file
+	* pitivi/projectsaver.py:
+	some minor corrections.
+	
+
 2007-09-12  Edward Hervey  <bilboed@bilboed.com>
 
 	* pitivi/sourcelist.py:
